fixed radio button alignment for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,10 @@ main {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    /* code found in stack overflow */
     vertical-align: baseline;
+    box-sizing: border-box;
+    display: inline-block;
 }
 
 
